// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import a registration should give me a CSV template when I request it 1`] = `
[
  "addressCity",
  "addressHouseNumber",
  "addressHouseNumberAddition",
  "addressPostalCode",
  "addressStreet",
  "firstName",
  "fspName",
  "lastName",
  "paymentAmountMultiplier",
  "phoneNumber",
  "preferredLanguage",
  "referenceId",
  "whatsappPhoneNumber",
]
`;

exports[`Import a registration should throw an error with a dropdown custom atribute set to null 1`] = `
[
  {
    "column": "house",
    "error": "Value 'null' is not in the allowed options: 'lannister, stark, greyjoy' for attribute 'house'",
    "lineNumber": 1,
    "value": null,
  },
]
`;

exports[`Import a registration should throw an error with a numberic custom atribute set to null 1`] = `
[
  {
    "column": "addressHouseNumber",
    "error": "Value is not a valid numeric",
    "lineNumber": 1,
    "value": null,
  },
]
`;
